# basic

./: .gitattributes  .gitignore  BEGIN_END.md  Basic-Core-Language-Spec.md  Cargo.toml  DEBUILD_PROB.md  DEBUILD_SUCCESS.md  DIE_ON_HILL.md  IMPLICIT_IF_BLOCKS.md  INCLUDES_JUNIE_PROMPT.md  MAKE_CLI.md  README.md  TLDR.md  UPGRADE_FUNCS.md  _.basx  upgrade.bas
basilc/: Cargo.toml  build.rs
basilc/includes/: hello.bas  upgrade.bas
basilc/src/: embedded.rs  main.rs  preprocess.rs  repl.rs
basilc/tests/: embed_make.rs  lang_features.rs  testmode.rs
basilcore/ast/src/: lib.rs
basilcore/bytecode/src/: lib.rs
basilcore/common/src/: lib.rs
basilcore/compiler/src/: lib.rs  service.rs
basilcore/lexer/src/: lib.rs
basilcore/parser/src/: lib.rs
basilcore/vm/: Cargo.toml
basilcore/vm/src/: basil_objects.rs  lib.rs
basilcore/vm/tests/: debug_api.rs
debian/: changelog  control  files  rules
debian/source/: options
examples/: for.bas  hello.bas  hello.basx
